--- a/tools/study_results.ipynb
+++ b/tools/study_results.ipynb
@@ -1,91 +1,73 @@
 {
- "metadata": {
-  "name": "",
-  "signature": "sha256:dc66d59cb9b65bc7a7c0b69b95c4ae22a1d186a707f53bcca233299b7deebc58"
- },
- "nbformat": 3,
- "nbformat_minor": 0,
  "worksheets": [
   {
    "cells": [
     {
      "cell_type": "code",
-     "collapsed": false,
+     "metadata": {},
+     "outputs": [],
      "input": [
       "import pandas as pd\n",
       "import matplotlib.pyplot as plt"
      ],
      "language": "python",
-     "metadata": {},
-     "outputs": [],
      "prompt_number": 1
     },
     {
      "cell_type": "code",
-     "collapsed": false,
+     "metadata": {},
+     "outputs": [],
      "input": [
       "%matplotlib inline"
      ],
      "language": "python",
-     "metadata": {},
-     "outputs": [],
      "prompt_number": 3
     },
     {
      "cell_type": "code",
-     "collapsed": false,
+     "metadata": {},
+     "outputs": [],
      "input": [
       "code_info = pd.read_csv('system_info.csv')"
      ],
      "language": "python",
-     "metadata": {},
-     "outputs": [],
      "prompt_number": 4
     },
     {
      "cell_type": "code",
-     "collapsed": false,
+     "metadata": {},
+     "outputs": [],
      "input": [
       "code_info['Total Files'] = code_info['c++ Files'] + code_info['Headers'] + code_info['Python Files']"
      ],
      "language": "python",
-     "metadata": {},
-     "outputs": [],
      "prompt_number": 5
     },
     {
      "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "code_info['Total LOC'] = code_info['c++ LOC'] + code_info['Header LOC'] + code_info['Python LOC']\n"
-     ],
-     "language": "python",
      "metadata": {},
      "outputs": [],
+     "input": [
+      "code_info['Total LOC'] = code_info['c++ LOC'] + code_info['Header LOC'] + code_info['Python LOC']"
+     ],
+     "language": "python",
      "prompt_number": 6
     },
     {
      "cell_type": "code",
-     "collapsed": false,
+     "metadata": {},
+     "outputs": [],
      "input": [
       "results = pd.read_csv('first_results.csv')"
      ],
      "language": "python",
-     "metadata": {},
-     "outputs": [],
      "prompt_number": 18
     },
     {
      "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "results.threshold_comparisions.describe()"
-     ],
-     "language": "python",
      "metadata": {},
      "outputs": [
       {
-       "metadata": {},
        "output_type": "pyout",
        "prompt_number": 19,
        "text": [
@@ -98,72 +80,70 @@
         "75%        7.000000\n",
         "max      151.000000\n",
         "Name: threshold_comparisions, dtype: float64"
-       ]
+       ],
+       "metadata": {}
       }
      ],
+     "input": [
+      "results.threshold_comparisions.describe()"
+     ],
+     "language": "python",
      "prompt_number": 19
     },
     {
      "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "results.threshold_comparisions.sum()"
-     ],
-     "language": "python",
      "metadata": {},
      "outputs": [
       {
-       "metadata": {},
        "output_type": "pyout",
        "prompt_number": 20,
        "text": [
         "747"
-       ]
+       ],
+       "metadata": {}
       }
      ],
+     "input": [
+      "results.threshold_comparisions.sum()"
+     ],
+     "language": "python",
      "prompt_number": 20
     },
     {
      "cell_type": "code",
-     "collapsed": false,
+     "metadata": {},
+     "outputs": [],
      "input": [
       "more_than_one = results[results.threshold_comparisions != 0]"
      ],
      "language": "python",
-     "metadata": {},
-     "outputs": [],
      "prompt_number": 22
     },
     {
      "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "len(more_than_one)"
-     ],
-     "language": "python",
      "metadata": {},
      "outputs": [
       {
-       "metadata": {},
        "output_type": "pyout",
        "prompt_number": 24,
        "text": [
         "43"
-       ]
+       ],
+       "metadata": {}
       }
      ],
+     "input": [
+      "len(more_than_one)"
+     ],
+     "language": "python",
      "prompt_number": 24
     },
     {
      "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "more_than_one.describe()"
-     ],
-     "language": "python",
      "metadata": {},
      "outputs": [
       {
+       "output_type": "pyout",
        "html": [
         "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
         "<table border=\"1\" class=\"dataframe\">\n",
@@ -282,9 +262,6 @@
         "</table>\n",
         "</div>"
        ],
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 25,
        "text": [
         "       clean_time  additional_time  threshold_comparisions         cpp  \\\n",
         "count   43.000000        43.000000               43.000000   43.000000   \n",
@@ -305,22 +282,21 @@
         "50%     1.000000   6.000000    3.000000      3.000000   2.000000  \n",
         "75%     9.000000  13.500000   13.500000      8.500000   3.500000  \n",
         "max    53.000000  46.000000  142.000000     38.000000  12.000000  "
-       ]
+       ],
+       "metadata": {}
       }
      ],
+     "input": [
+      "more_than_one.describe()"
+     ],
+     "language": "python",
      "prompt_number": 25
     },
     {
      "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "more_than_one.threshold_comparisions.value_counts()"
-     ],
-     "language": "python",
      "metadata": {},
      "outputs": [
       {
-       "metadata": {},
        "output_type": "pyout",
        "prompt_number": 29,
        "text": [
@@ -351,21 +327,33 @@
         "19     1\n",
         "57     1\n",
         "dtype: int64"
-       ]
+       ],
+       "metadata": {}
       }
      ],
+     "input": [
+      "more_than_one.threshold_comparisions.value_counts()"
+     ],
+     "language": "python",
      "prompt_number": 29
     },
     {
      "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "input": [
+      ""
+     ],
+     "language": "python"
     }
-   ],
-   "metadata": {}
+   ]
   }
- ]
+ ],
+ "cells": [],
+ "metadata": {
+  "name": "",
+  "signature": "sha256:dc66d59cb9b65bc7a7c0b69b95c4ae22a1d186a707f53bcca233299b7deebc58"
+ },
+ "nbformat": 3,
+ "nbformat_minor": 0
 }
